@@ -1,3 +1,7 @@
+2017-05-16  Kurt Kunig <kurt.kunig@kupix.de>
+  * Add error, if single view was called without UID in URI
+  * Add option to FlexForm to show/hide pagebrowser
+
 2019-05-09  Stefan Froemken <projects@jweiland.net>
   * Extension key kk_downloader was transferred to jweiland.net
   * Update version number to 4.0.0
